// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`
SELECT
  a
 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "a",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`ALTER TABLE tbl_name ADD COLUMN a int 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`ALTER TABLE tbl_name ADD a int 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`ALTER TABLE tbl_name ADD a int AFTER b 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`ALTER TABLE tbl_name ADD a int FIRST 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`CREATE TABLE "Foo" ( a int ) 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "\\"(\\" expected.",
  "type": undefined,
}
`;

exports[`CREATE TABLE Foo ( a int ) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "CREATE",
      "definitions": Array [
        Object {
          "columnName": "a",
          "columnType": "int",
          "type": "CreateDefinition",
        },
      ],
      "tableName": "Foo",
    },
  ],
  "type": "Statement",
}
`;

exports[`CREATE TABLE Foo ( a int primary key ) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "CREATE",
      "definitions": Array [
        Object {
          "columnName": "a",
          "columnType": "int",
          "type": "CreateDefinition",
        },
        Object {
          "columnName": "primary",
          "columnType": "key",
          "type": "CreateDefinition",
        },
      ],
      "tableName": "Foo",
    },
  ],
  "type": "Statement",
}
`;

exports[`CREATE TABLE Foo ( a int, b varchar(255) ) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "CREATE",
      "definitions": Array [
        Object {
          "columnName": "a",
          "columnType": "int",
          "type": "CreateDefinition",
        },
        Object {
          "columnName": "b",
          "columnType": "varchar",
          "type": "CreateDefinition",
        },
      ],
      "tableName": "Foo",
    },
  ],
  "type": "Statement",
}
`;

exports[`CREATE TABLE Foo ( key (id) ) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "CREATE",
      "definitions": Array [],
      "tableName": "Foo",
    },
  ],
  "type": "Statement",
}
`;

exports[`CREATE TABLE Foo () 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "CREATE",
      "definitions": Array [],
      "tableName": "Foo",
    },
  ],
  "type": "Statement",
}
`;

exports[`DROP DATABASE IF EXISTS db_name 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`DROP DATABASE db_name 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`SELECT "1", '1', \`1\` 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "LiteralToken",
          "value": "1",
        },
        Object {
          "type": "LiteralToken",
          "value": "1",
        },
        Object {
          "type": "LiteralToken",
          "value": "1",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT (a) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "arguments": Array [
            "a",
          ],
          "callee": undefined,
          "type": "CallExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT 1; SELECT 2; 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "1",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT 2 * (a % b) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": Object {
            "left": "2",
            "operator": "*",
            "right": Object {
              "arguments": Array [
                "a",
              ],
              "callee": undefined,
              "type": "CallExpression",
            },
          },
          "operator": "%",
          "right": "b",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a + b * c / d 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": Object {
            "left": "a",
            "operator": "+",
            "right": Object {
              "left": "b",
              "operator": "*",
              "right": "c",
            },
          },
          "operator": "/",
          "right": "d",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a + b - c 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": "+",
          "right": Object {
            "left": "b",
            "operator": "-",
            "right": "c",
          },
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a + b 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": "+",
          "right": "b",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a + b as c 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": "+",
          "right": "b",
        },
        "as",
        "c",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a FROM b WHERE m = 6; 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "a",
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        "b",
      ],
    },
    Object {
      "clauseName": "WHERE",
      "expressions": Array [
        Object {
          "left": "m",
          "operator": "=",
          "right": "6",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a from A.B 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "a",
      ],
    },
    Object {
      "clauseName": "from",
      "expressions": Array [
        "A",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a, b, 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "a",
        "b",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT f(g(a)) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "arguments": Array [
            "g",
          ],
          "callee": "f",
          "type": "CallExpression",
        },
        Object {
          "arguments": Array [
            "a",
          ],
          "callee": undefined,
          "type": "CallExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT fn(), fn(a), fn(a, b) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "arguments": Array [],
          "callee": "fn",
          "type": "CallExpression",
        },
        Object {
          "arguments": Array [
            "a",
          ],
          "callee": "fn",
          "type": "CallExpression",
        },
        Object {
          "arguments": Array [
            "a",
            "b",
          ],
          "callee": "fn",
          "type": "CallExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT not from a 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "not",
      ],
    },
    Object {
      "clauseName": "from",
      "expressions": Array [
        "a",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT null, true, current_timestamp from a 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "null",
        "true",
        "current_timestamp",
      ],
    },
    Object {
      "clauseName": "from",
      "expressions": Array [
        "a",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT varchar from a 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "varchar",
      ],
    },
    Object {
      "clauseName": "from",
      "expressions": Array [
        "a",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`UPDATE Foo SET a = 5 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "UPDATE",
      "expressions": Array [
        "Foo",
      ],
    },
    Object {
      "clauseName": "SET",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": "=",
          "right": "5",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`UPDATE Foo SET f(a) = 5 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "UPDATE",
      "expressions": Array [
        "Foo",
      ],
    },
    Object {
      "clauseName": "SET",
      "expressions": Array [
        Object {
          "left": Object {
            "arguments": Array [
              "a",
            ],
            "callee": "f",
            "type": "CallExpression",
          },
          "operator": "=",
          "right": "5",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;
